# agentic-ai

./: .gitignore  Agentic_RAG.ipynb  Assingment_solution_XYZ_RAG_solution.ipynb  CrewAI_agent_demo.ipynb  LangChain_end_to_end.ipynb  README.md  WeatherBotQA_RAG_solution.ipynb  pyproject.toml
part1-fundementals/: README.md  app.py  itssraj-app.py  lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb  requirements.txt  utils.py
part1-fundementals/community-contributions/idrak-dareshani/: lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb
setup/: SETUP-PC.md  SETUP-mac.md
